--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -4,11 +4,9 @@ COPY ./ /app
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install /y iputils-ping net-tools
+RUN apt-get update && apt-get install -y iputils-ping net-tools
 
 RUN npm install
-
-EXPOSE 8000
 
 ENTRYPOINT ["npm", "start"]
 
