--- a/kube.yml
+++ b/kube.yml
@@ -31,7 +31,7 @@ spec:
         -
           name: sentinel-hikvision
           image: steventaylor.me:5000/sentinel-hikvision-arm:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             -
               name: "PORT"
