--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,14 +1,14 @@
-FROM mhart/alpine-node:latest
+FROM node:latest
 
-#bash is used to run npm test inside the container
-RUN apk update && apk upgrade && apk --update add bash && rm -rf /var/cache/apk/*
+COPY ./ /app
+
+WORKDIR /app
+
+RUN apt-get update && apt-get install -y iputils-ping net-tools
 
 RUN apt-get install -y graphicsmagick imagemagick
 
-WORKDIR /src
-ADD . .
-
 RUN npm install
 
-EXPOSE 5000
-CMD ["node", "app.js"]
+ENTRYPOINT ["npm", "start"]
+
