Fix docker file

--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -6,7 +6,7 @@ WORKDIR /app
 
 #RUN apt-get update && apt-get install -y iputils-ping net-tools
 
-RUN apt-get install -y graphicsmagick imagemagick
+RUN apt-get update && apt-get install -y graphicsmagick imagemagick
 
 RUN npm install
 
