--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,5 +25,6 @@ deploy_job:
   stage: deploy
   script:
     - docker -H tcp://$SENTINEL_HOST:2375 login -u gitlab-ci-token -p $CI_JOB_TOKEN docker.steventaylor.me
+    - docker -H tcp://$SENTINEL_HOST:2375 pull $REGISTRY_IMAGE:0.0.$CI_BUILD_ID
     - docker -H tcp://$SENTINEL_HOST:2375 service update --image $REGISTRY_IMAGE:0.0.$CI_BUILD_ID $CI_PROJECT_PATH_SLUG
     - docker -H tcp://$SENTINEL_HOST:2375 logout docker.steventaylor.me
