--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.4",
     "uuid": "^3.3.2",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "sentinel-common": "git+http://gitlab.steventaylor.me/sentinel/common.git"
   },
   "devDependencies": {
     "chai": "^4.2.0",
