--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "q": "^1.5.1",
     "redis": "^2.8.0",
     "request": "^2.88.0",
+    "sentinel-common": "git+http://gitlab.steventaylor.me/sentinel/common.git",
     "superagent": "^4.0.0",
     "superagent-proxy": "^2.0.0",
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.4",
     "uuid": "^3.3.2",
-    "xml2js": "^0.4.19",
-    "sentinel-common": "git+http://gitlab.steventaylor.me/sentinel/common.git"
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "chai": "^4.2.0",
