--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,16 +1,19 @@
-FROM node:latest
+FROM node:10-jessie
 
-COPY ./ /app
+WORKDIR /src
+ADD . .
 
-WORKDIR /app
+ARG CI_JOB_AUTH
 
-RUN apt-get update && apt-get install -y iputils-ping net-tools
+RUN apt-get update && \
+    apt-get -y install git graphicsmagick imagemagick
 
-RUN apt-get install -y graphicsmagick imagemagick
+RUN if [ ! -z "${CI_JOB_AUTH}" ] ; then git config --global url.http://${CI_JOB_AUTH}@gitlab.steventaylor.me/.insteadOf http://gitlab.steventaylor.me/ ; fi
 
-RUN npm install
+RUN npm install && \
+    apt-get -y remove git && \
+    npm install
 
 EXPOSE 5000
 
-ENTRYPOINT ["npm", "start"]
-
+CMD ["node", "app.js"]
