--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.4",
     "uuid": "^3.3.2",
+    "winston": "^3.2.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
